--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,6 +14,7 @@
     {%- unless settings.type_header_font.system? and settings.type_body_font.system? -%}
       <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     {%- endunless -%}
+    <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
 
     <title>
       {{ page_title }}
