--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -24,24 +24,10 @@
     }
   {%- endstyle -%}
 {%- endif -%}
-{%- style -%}
-  #Slider-{{ section.id }} .slideshow__media .slideshow__image-mobile {
-    display: none !important;
-  }
-
-  #Slider-{{ section.id }} .slideshow__media .slideshow__image-desktop {
-    display: block !important;
-  }
-
-  @media screen and (max-width: 749px) {
-    #Slider-{{ section.id }} .slideshow__media .slideshow__image-desktop {
-      display: none !important;
-    }
-    #Slider-{{ section.id }} .slideshow__media .slideshow__image-mobile {
-      display: block !important;
-    }
-  }
-{%- endstyle -%}
+{%- comment -%}
+  Removido: alternância via CSS entre imagens desktop/mobile.
+  Usaremos <picture> com <source media> para evitar downloads duplicados.
+{%- endcomment -%}
 <slideshow-component
   class="slider-mobile-gutter{% if section.settings.layout == 'grid' %} page-width{% endif %}{% if section.settings.show_text_below %} mobile-text-below{% endif %}"
   role="region"
@@ -142,74 +128,55 @@
             {%- liquid
               assign image_desktop = block.settings.image
               assign image_mobile = block.settings.image_mobile
-              assign height = block.settings.image.width | divided_by: block.settings.image.aspect_ratio | round
-
-              if section.settings.image_behavior == 'ambient'
-                assign sizes = '120vw'
-                assign widths = '450, 660, 900, 1320, 1800, 2136, 2400, 3600, 7680'
-              else
-                assign sizes = '100vw'
-                assign widths = '375, 550, 750, 1100, 1500, 1780, 2000, 3000, 3840'
-              endif
-              assign sizes_mobile = '100vw'
-              assign widths_mobile = '375, 550, 750, 1100'
+              assign height_desktop = image_desktop.width | divided_by: image_desktop.aspect_ratio | round
               assign fetch_priority = 'auto'
 
-              if section.index == 1
+              if section.index == 1 and forloop.first
                 assign fetch_priority = 'high'
               endif
+
+              if section.settings.image_behavior == 'ambient'
+                assign sizes_desktop = '120vw'
+                assign widths_desktop = '450, 660, 900, 1320, 1800, 2136, 2400, 3600, 7680'
+              else
+                assign sizes_desktop = '100vw'
+                assign widths_desktop = '375, 550, 750, 1100, 1500, 1780, 2000, 3000, 3840'
+              endif
+
+              assign sizes_mobile = '100vw'
             -%}
 
-            {%- if forloop.first %}
-              {{
-                image_desktop
-                | image_url: width: 3840
-                | image_tag:
-                  class: 'slideshow__image-desktop',
-                  height: height,
-                  sizes: sizes,
-                  widths: widths,
-                  fetchpriority: fetch_priority
-              }}
-            {%- else -%}
-              {{
-                image_desktop
-                | image_url: width: 3840
-                | image_tag:
-                  class: 'slideshow__image-desktop',
-                  loading: 'lazy',
-                  height: height,
-                  sizes: sizes,
-                  widths: widths
-              }}
-            {%- endif -%}
-            {%- if image_mobile != blank -%}
-              {%- assign height_mobile = image_mobile.width | divided_by: image_mobile.aspect_ratio | round -%}
-
+            <picture>
+              {%- if image_mobile != blank -%}
+                <source
+                  media="(max-width: 749px)"
+                  srcset="
+                    {{ image_mobile | image_url: width: 375 }} 375w,
+                    {{ image_mobile | image_url: width: 550 }} 550w,
+                    {{ image_mobile | image_url: width: 750 }} 750w,
+                    {{ image_mobile | image_url: width: 1100 }} 1100w
+                  "
+                  sizes="{{ sizes_mobile }}"
+                >
+              {%- endif -%}
               {%- if forloop.first -%}
                 {{
-                  image_mobile
-                  | image_url: width: 1100
+                  image_desktop
+                  | image_url: width: 3840
                   | image_tag:
-                    class: 'slideshow__image-mobile',
-                    height: height_mobile,
-                    sizes: sizes_mobile,
-                    widths: widths_mobile,
+                    height: height_desktop,
+                    sizes: sizes_desktop,
+                    widths: widths_desktop,
                     fetchpriority: fetch_priority
                 }}
               {%- else -%}
                 {{
-                  image_mobile
-                  | image_url: width: 1100
-                  | image_tag:
-                    class: 'slideshow__image-mobile',
-                    loading: 'lazy',
-                    height: height_mobile,
-                    sizes: sizes_mobile,
-                    widths: widths_mobile
+                  image_desktop
+                  | image_url: width: 3840
+                  | image_tag: loading: 'lazy', height: height_desktop, sizes: sizes_desktop, widths: widths_desktop
                 }}
               {%- endif -%}
-            {%- endif -%}
+            </picture>
           {%- else -%}
             {%- assign placeholder_slide = forloop.index | modulo: 2 -%}
             {%- if placeholder_slide == 1 -%}
